src/test/resources/frontendReference/invalid/syntaxErr/while/whilErr.waccast
-- Compiling...
Errors detected during compilation! Exit code 100 returned.
Syntactic Error at 12:7 -- mismatched input 'false' expecting {'[', '='}
1 parser error(s) detected, no further compilation attempted.
